2016-06-17  DJ Delorie  <dj@redhat.com>

	PR target/71338
	* config/rl78/rl78-expand.c (umulqihi3): Enable for G10.
	* config/rl78/rl78-virtual.c (umulhi3_shift_virt): Likewise.
	(umulqihi3_virt): Likewise.
	* config/rl78/rl78-real.c (umulhi3_shift_real): Likewise.
	(umulqihi3_real): Likewise.

2016-06-17  Martin Liska  <mliska@suse.cz>

	* tree-ssa-reassoc.c (transform_add_to_multiply): Use auto_vec.

2016-06-17  Martin Liska  <mliska@suse.cz>

	* predict.def: PRED_LOOP_EXIT from 92 to 85.

2016-06-17  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/arm/arm_neon.h (vadd_f32): replace __FAST_MATH with
	__FAST_MATH__.
	(vaddq_f32): Likewise.
	(vmul_f32): Likewise.
	(vmulq_f32): Likewise.
	(vsub_f32): Likewise.
	(vsubq_f32): Likewise.

2016-06-17  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/71347
	* tree-ssa-loop-ivopts.c (determine_group_iv_cost_address): Compute
	cost for all uses in group.

2016-06-17 Bin Cheng  <bin.cheng@arm.com>

	* tree-vect-loop.c (vect_create_epilog_for_reduction): Only
	insert gimple seq if it's not empty.

2016-06-17  Bin Cheng  <bin.cheng@arm.com>

	* tree-vectorizer.h (struct dr_with_seg_len): Remove class
	member OFFSET.
	* tree-vect-data-refs.c (operator ==): Handle DR_OFFSET directly,
	rather than OFFSET.
	(comp_dr_with_seg_len_pair): Ditto.
	(vect_prune_runtime_alias_test_list): Ditto.  Also Canonicalize
	struct dr_with_seg_len_pair against DR_OFFSET.
	* tree-vect-loop-manip.c (vect_create_cond_for_alias_checks): Handle
	DR_OFFSET directly.

2016-06-17  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* config/aarch64/geniterators.sh: Handle parenthesised conditions.

2016-06-16  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_output_pic_pcrel_sequence): New.
	(pa_output_lbranch): Use pa_output_pic_pcrel_sequence.
	(pa_output_millicode_call): Likewise.
	(pa_output_call): Likewise.
	(pa_output_indirect_call): Likewise.
	(pa_asm_output_mi_thunk): Likewise.
