@@ -1,3 +1,10 @@
+2016-06-18  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR bootstrap/71435
+	* reload1.c (reload): Pass 0 to finish_spills when called because
+	update_eliminables_and_spill returns true and remove did_spill.
+	(finish_spills): Adjust comment and document GLOBAL parameter.
+
 2016-06-17  DJ Delorie  <dj@redhat.com>
 
 	PR target/71338
